<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tv2x_canbus</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edoardo.torrini@gmail.com">Edoardo Torrini</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>tv2x_base</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
