<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tv2x_common</name>
  <version>1.0.0</version>
  <description>Common configurations for TV2X packages</description>
  <maintainer email="edoardo.torrini@gmail.com">EdoardoTorrini</maintainer>
  <license>LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
